# Chipmo_Security_Camera_AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.gpu  Procfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  mypy.ini  nixpacks.toml  package-lock.json  pytest.ini  railway.json  requirements.txt  ruff.toml  settings.json
.claude/: settings.local.json
Sentry/: 01_Sentry_PRD_v1.1.md  02_Sentry_Architecture_v3.0.html  03_Sentry_Pricing_Business_Model.md  04_Sentry_Onboarding_Flow.md  05_Sentry_Multi_Tenancy_Architecture.md  06_Sentry_MVP_Roadmap.md  07_Sentry_Tasks.md  Chipmo_Competitive_Analysis.md
Ultralytics/: settings.json
agent/: .dockerignore  Dockerfile  README.md  config.example.yaml  pyproject.toml
agent/installer/linux/: README.md  install.sh  sentry-agent.service  uninstall.sh
agent/installer/macos/: README.md  build.sh  mn.sentry.agent.plist  run-agent.sh  sentry-agent.rb  uninstall.sh
agent/installer/macos/scripts/: postinstall  preinstall
agent/installer/windows/: README.txt  SentryAgent.iss  bootstrap.ps1  service-wrapper.ps1  uninstall.ps1
agent/sentry_agent/: __init__.py  __main__.py  capture.py  cli.py  config.py  probe.py  runner.py
alembic/: env.py
docs/: 00-AS-IS-INVENTORY.md  01-ARCHITECTURE.md  02-ROADMAP.md  03-TECH-SPECS.md  04-EDGE-DEPLOYMENT.md  04-INFRASTRUCTURE-STRATEGY.md  05-MIGRATION-PLAN.md  05-ONBOARDING-PLAYBOOK.md  06-DATABASE-SCHEMA.md  07-API-SPEC.md  07-SCHEMA-MIGRATION-LOCK.md  08-TESTING-STRATEGY.md  (+6 more)
(+343 files in other folders)
